Car Dealer: Minor Fixes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
         <h4>Click the buttons below</h4>
         <a class="btn btn-warning" role="button" th:href="@{/customers/all}">Ordered Customers</a>
         <a class="btn btn-warning" role="button" th:href="@{/cars/all}">Cars Makes</a>
+        <a class="btn btn-warning" role="button" th:href="@{/suppliers}">Suppliers</a>
     </div>
 </body>
 </html>
