--- a/src/main/resources/templates/cars/cars-make-models.html
+++ b/src/main/resources/templates/cars/cars-make-models.html
@@ -7,7 +7,7 @@
 <body>
 <div class="jumbotron" style="background-color: deepskyblue">
     <h1>Cars Make Models</h1>
-    <table class="table table-striped">
+    <table class="table table-striped border-dark">
         <thead>
         <tr>
             <th scope="col">Make</th>
