--- a/src/main/resources/templates/customers/customers-index.html
+++ b/src/main/resources/templates/customers/customers-index.html
@@ -7,10 +7,10 @@
 <div class="jumbotron">
     <h1>Welcome to car dealer!</h1>
     <h2>Spring Essentials Exercise</h2>
-    <h4>Suppliers</h4>
-    <hr/>
-    <a class="btn bg-white" th:href="@{/suppliers/local}">Local Suppliers</a>
-    <a class="btn bg-white" th:href="@{/suppliers/importers}">Importers</a>
+    <h4>Customers</h4>
+    <hr />
+    <a class="btn bg-white" th:href="@{/customers/all/ascending}">Ordered Customers Asc</a>
+    <a class="btn bg-white" th:href="@{/customers/all/descending}">Ordered Customers Desc</a>
     <a class="btn bg-white" th:href="@{/}">Back to home</a>
 </div>
 </body>
