--- a/src/main/resources/templates/cars/cars-makes-list.html
+++ b/src/main/resources/templates/cars/cars-makes-list.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:insert="~{fragments/head}"></th:block>
+    <link rel="stylesheet" href="../bootstrap.css">
 </head>
 <body>
-<div class="jumbotron" style="background-color: deepskyblue">
-    <h1>Cars Make Models</h1>
-    <table class="table table-striped border-dark">
+<div class="jumbotron">
+    <h1>Welcome to car dealer!</h1>
+    <h2>Spring Essentials Exercise</h2>
+    <h4>2. Cars From Make Task</h4>
+    <hr />
+    <table class="table table-striped">
         <thead>
         <tr>
             <th scope="col">Make</th>
@@ -21,13 +24,15 @@
             <tr>
                 <td th:text="${car.make}"></td>
                 <td th:text="${car.model}"></td>
-                <td th:text="${car.travelledDistance}"></td>
+                <td th:text="|${car.travelledDistance} km|"></td>
+                <td><a class="btn btn-info" th:href="@{/cars/{id}/parts(id=${car.id})}">Parts</a></td>
             </tr>
         </th:block>
 
         </tbody>
     </table>
-    <a class="btn btn" role="button" style="background-color: white" th:href="@{/}">Back to home</a>
+    <a class="btn bg-white" th:href="@{/cars}">Back to cars</a>
+    <a class="btn bg-white" th:href="@{/}">Back to home</a>
 </div>
 </body>
 </html>
