--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,14 @@
     <th:block th:insert="~{fragments/head}"></th:block>
 </head>
 <body>
-    <div class="jumbotron col-sm-2" style="background-color: skyblue">
+    <div class="jumbotron">
         <h1>Welcome to car dealer!</h1>
         <h2>Spring Essentials Exercise</h2>
         <h4>Click the buttons below</h4>
-        <a class="btn btn-warning" role="button" th:href="@{/customers/all}">Ordered Customers</a>
-        <a class="btn btn-warning" role="button" th:href="@{/cars/all}">Cars Makes</a>
-        <a class="btn btn-warning" role="button" th:href="@{/suppliers}">Suppliers</a>
+        <hr />
+        <a class="btn bg-white" th:href="@{/customers}">Customers</a>
+        <a class="btn bg-white" th:href="@{/cars}">Cars</a>
+        <a class="btn bg-white" th:href="@{/suppliers}">Suppliers</a>
     </div>
 </body>
 </html>
