--- a/src/main/resources/templates/suppliers/suppliers-details.html
+++ b/src/main/resources/templates/suppliers/suppliers-details.html
@@ -2,13 +2,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:insert="~{fragments/head}"></th:block>
+    <link rel="stylesheet" href="../bootstrap.css">
 </head>
 <body>
-<div class="jumbotron col-sm-2" style="background-color: lightgrey">
+<div class="jumbotron">
     <h1>Welcome to car dealer!</h1>
     <h2>Spring Essentials Exercise</h2>
     <h4>Filter Suppliers Task</h4>
-    <table class="table table-striped border-dark">
+    <hr/>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th scope="col">Id</th>
@@ -28,7 +30,8 @@
 
         </tbody>
     </table>
-    <a class="btn btn" role="button" style="background-color: white" th:href="@{/}">Back to home</a>
+    <a class="btn bg-white" th:href="@{/suppliers}">Back to suppliers</a>
+    <a class="btn bg-white" th:href="@{/}">Back to home</a>
 </div>
 </body>
 </html>
