--- a/src/main/resources/templates/customers/customers-list.html
+++ b/src/main/resources/templates/customers/customers-list.html
@@ -19,7 +19,6 @@
             </tr>
             </thead>
             <tbody>
-
                 <th:block th:each="customer : ${customers}">
                     <tr>
                         <td th:text="${customer.name}"></td>
@@ -30,6 +29,7 @@
                         <th:block th:unless="${customer.youngDriver}">
                             <td><input type="checkbox" disabled></td>
                         </th:block>
+                        <td><a class="btn btn-info" th:href="@{/customers/{id}(id=${customer.id})}">Info</a></td>
                     </tr>
                 </th:block>
 
