Car Dealer: Task 6

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
         <a class="btn bg-white" th:href="@{/customers}">Customers</a>
         <a class="btn bg-white" th:href="@{/cars}">Cars</a>
         <a class="btn bg-white" th:href="@{/suppliers}">Suppliers</a>
+        <a class="btn bg-white" th:href="@{/sales}">Sales</a>
     </div>
 </body>
 </html>
