--- a/src/main/resources/templates/suppliers/suppliers-index.html
+++ b/src/main/resources/templates/suppliers/suppliers-index.html
@@ -11,7 +11,7 @@
     <hr/>
     <a class="btn bg-white" th:href="@{/suppliers/local}">Local Suppliers</a>
     <a class="btn bg-white" th:href="@{/suppliers/importers}">Importers</a>
-    <a class="btn bg-white" th:href="@{/}">Back to home</a>
+    <a class="btn bg-white" th:href="@{/}">Back to Home</a>
 </div>
 </body>
 </html>
