--- a/src/main/resources/templates/customers/customers-index.html
+++ b/src/main/resources/templates/customers/customers-index.html
@@ -4,6 +4,7 @@
     <th:block th:insert="~{fragments/head}"></th:block>
 </head>
 <body>
+<th:block th:insert="~{fragments/navbar}"></th:block>
 <div class="jumbotron">
     <h1>Welcome to car dealer!</h1>
     <h2>Spring Essentials Exercise</h2>
