--- a/src/main/resources/templates/customers/customers-list.html
+++ b/src/main/resources/templates/customers/customers-list.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="../../bootstrap.css">
 </head>
 <body>
+<th:block th:insert="~{fragments/navbar}"></th:block>
     <div class="jumbotron">
         <h1>Ordered Customers</h1>
         <h2>Spring Essentials Exercise</h2>
-        <h4>1. Ordered Customers Task</h4>
+        <h4>Query 1. Ordered Customers Task</h4>
         <hr />
         <table class="table table-striped">
             <thead>
