--- a/src/main/resources/templates/sales/sales-details.html
+++ b/src/main/resources/templates/sales/sales-details.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="../bootstrap.css">
 </head>
 <body>
+<th:block th:insert="~{fragments/navbar}"></th:block>
     <div class="jumbotron">
         <h1>Welcome to car dealer!</h1>
         <h2>Spring Essentials Exercise</h2>
-        <h4>6. Sales with Applied Discount Task</h4>
+        <h4>Query 6. Sales with Applied Discount Task</h4>
         <hr />
         <h5 th:text="${sale.car.make}"></h5>
         <h5 th:text="${sale.car.model}"></h5>
