--- a/src/main/resources/templates/cars/cars-makes-list.html
+++ b/src/main/resources/templates/cars/cars-makes-list.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="../bootstrap.css">
 </head>
 <body>
+<th:block th:insert="~{fragments/navbar}"></th:block>
 <div class="jumbotron">
     <h1>Welcome to car dealer!</h1>
     <h2>Spring Essentials Exercise</h2>
-    <h4>2. Cars From Make Task</h4>
+    <h4>Query 2. Cars From Make Task</h4>
     <hr />
     <table class="table table-striped">
         <thead>
