--- a/src/main/resources/templates/sales/sales-index-discounted.html
+++ b/src/main/resources/templates/sales/sales-index-discounted.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../bootstrap.css">
 </head>
 <body>
+<th:block th:insert="~{fragments/navbar}"></th:block>
 <div class="jumbotron">
     <h1>Welcome to car dealer!</h1>
     <h2>Spring Essentials Exercise</h2>
