--- a/src/main/resources/templates/customers/customers-create.html
+++ b/src/main/resources/templates/customers/customers-create.html
@@ -7,13 +7,17 @@
 <body>
     <th:block th:insert="~{fragments/navbar}"></th:block>
     <div class="jumbotron">
+        <h1>Welcome to car dealer!</h1>
+        <h2>Spring Essentials Exercise</h2>
+        <h4>Task 5. Add Customers</h4>
+        <hr/>
         <form method="post" th:action="@{/customers/add}">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
             </div>
             <div class="form-group">
-                <label for="birthDate">Password</label>
+                <label for="birthDate">Birth Date</label>
                 <input type="date" class="form-control" id="birthDate" placeholder="Enter birth date" name="birthDateString">
             </div>
             <button type="submit" class="btn btn-primary">Add Customer</button>
