--- a/src/main/resources/templates/customers/customers-list.html
+++ b/src/main/resources/templates/customers/customers-list.html
@@ -31,6 +31,7 @@
                             <td><input type="checkbox" disabled></td>
                         </th:block>
                         <td><a class="btn btn-info" th:href="@{/customers/{id}(id=${customer.id})}">Info</a></td>
+                        <td><a class="btn " style="background-color: #856404" th:href="@{/customers/edit/{id}(id=${customer.id})}">Edit</a></td>
                     </tr>
                 </th:block>
 
