--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/customers/add}" style="color: white">Add Customer</a>
                 </li>
-
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/parts/add}" style="color: white">Add Part</a>
+                </li>
             </ul>
         </div>
     </nav>
