Car Dealer: Delete and Edit parts Tasks

--- a/src/main/resources/templates/parts/parts-create.html
+++ b/src/main/resources/templates/parts/parts-create.html
@@ -9,7 +9,7 @@
     <div class="jumbotron">
         <h1>Welcome to car dealer!</h1>
         <h2>Spring Essentials Exercise</h2>
-        <h4>Task 7. Add Customers</h4>
+        <h4>Task 7. Add Parts</h4>
         <hr/>
         <form method="post" th:action="@{/parts/add}">
             <div class="form-group">
