--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
         <a class="btn bg-white" th:href="@{/cars}">Cars</a>
         <a class="btn bg-white" th:href="@{/suppliers}">Suppliers</a>
         <a class="btn bg-white" th:href="@{/sales}">Sales</a>
+        <a class="btn bg-white" th:href="@{/parts}">Parts</a>
     </div>
 </body>
 </html>
