Car Dealer: Add cars Tasks

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,6 +12,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/parts/add}" style="color: white">Add Part</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/cars/add}" style="color: white">Add Car</a>
+                </li>
             </ul>
         </div>
     </nav>
